@@ -22,8 +22,8 @@ use `.mvn/community-maven.settings.xml` settings:
 
 In order to run this service locally, you will need the following:
 
-- [Maven 3.6.0+](https://maven.apache.org/download.cgi)
-- [AdoptOpenJDK8](https://adoptopenjdk.net/)
+- [Maven 3.8.0+](https://maven.apache.org/download.cgi)
+- [Java 17](https://adoptopenjdk.net/)
 - Infrastructure dependencies, deployable through the
   relevant [infrastructure template](https://dev.azure.com/slb-des-ext-collaboration/open-data-ecosystem/_git/infrastructure-templates?path=%2Finfra&version=GBmaster&_a=contents)
 - While not a strict dependency, example commands in this document
@@ -115,9 +115,9 @@ Check that maven is installed:
 
 ```bash
 $ mvn --version
-Apache Maven 3.6.0
+Apache Maven 3.8.0
 Maven home: /usr/share/maven
-Java version: 1.8.0_212, vendor: AdoptOpenJDK, runtime: /usr/lib/jvm/jdk8u212-b04/jre
+Java version: 17.0.7
 ...
 ```
 
@@ -181,7 +181,7 @@ $ mvn clean package --settings .mvn/community-maven.settings.xml
 [INFO] BUILD SUCCESS
 
 # run service locally **REQUIRES SPECIFIC ENVIRONMENT VARIABLES SET**
-$ java -jar $(find ./target/ -name '*.jar')
+$ java -jar $(find provider/indexer-azure/target/ -name *.jar) --add-opens java.base/java.lang=ALL-UNNAMED --add-opens  java.base/java.lang.reflect=ALL-UNNAMED
 
 # Test the application  **REQUIRES SPECIFIC ENVIRONMENT VARIABLES SET**
 $ mvn clean test --settings .mvn/community-maven.settings.xml -f integration-tests/pom.xml
